--- a/css/custom.css
+++ b/css/custom.css
@@ -23,14 +23,14 @@ li{
     color: #36454F;
 }
 h4 a{
-    color: yellow;
+    color: #7E04BF;
 }
 a:hover{
     text-decoration: none;
 }
 .img-responsive{
     max-width: 80%;
-    max-height: 50%;
+    max-height: 40%;
 }
 @media screen and (max-width: 480px) {
     .no-space{
