--- a/css/custom.css
+++ b/css/custom.css
@@ -49,5 +49,8 @@ a:hover{
         padding-right: 0;
         margin: 0px 50% 0px 30%;
     }
+    #twitter{
+        margin-bottom: -30px;
+    }
 
 }
